# scratch-test-interpreter

./: Cargo.toml  README.md
.github/workflows/: deploy-docs-to-pages.yml
src/: builder.rs  default_state.rs  error.rs  interpreter.rs  lib.rs  state.rs
src/builder/: limits.rs
src/interpreter/: call_procedures.rs  comparisons.rs  expressions.rs  stack.rs  statements.rs
