[package]
name = "scratch-test-interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
either = "1.16.0"
rand = { version = "0.10.0", optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }
thiserror = "2.0"
schemars = { version = "1.2.1", optional = true }
utoipa = { version = "5.5.0", features = ["rc_schema"], optional = true }


[dependencies.svalue]
git = "https://github.com/Marcel-Scherzinger/scratch-test-value"
package = "scratch-test-value"
default-features = false

[dependencies.smodel]
git = "https://github.com/Marcel-Scherzinger/scratch-test-model"
package = "scratch-test-model"
default-features = false

[features]
default = ["rand"]
rand = ["dep:rand"]
serde = ["dep:serde", "smodel/serde"]
schemars = ["dep:schemars", "smodel/schemars", "svalue/schemars"]
utoipa = ["dep:utoipa", "smodel/utoipa", "svalue/utoipa"]
